--- a/ServiceTCP/nbproject/project.properties
+++ b/ServiceTCP/nbproject/project.properties
@@ -33,9 +33,33 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TCPService
 excludes=
+file.reference.commons-codec-1.11.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\commons-codec-1.11.jar
+file.reference.commons-logging-1.2.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.10.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\fluent-hc-4.5.10.jar
+file.reference.gson-2.8.5.jar=..\\libs\\gson\\gson-2.8.5.jar
+file.reference.httpclient-4.5.10.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\httpclient-4.5.10.jar
+file.reference.httpclient-cache-4.5.10.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\httpclient-cache-4.5.10.jar
+file.reference.httpclient-osgi-4.5.10.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\httpclient-osgi-4.5.10.jar
+file.reference.httpclient-win-4.5.10.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\httpclient-win-4.5.10.jar
+file.reference.httpcore-4.4.12.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\httpcore-4.4.12.jar
+file.reference.httpmime-4.5.10.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\httpmime-4.5.10.jar
+file.reference.jna-4.5.2.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\jna-4.5.2.jar
+file.reference.jna-platform-4.5.2.jar=..\\libs\\httpcomponents-client-4.5.10\\lib\\jna-platform-4.5.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fluent-hc-4.5.10.jar}:\
+    ${file.reference.httpclient-4.5.10.jar}:\
+    ${file.reference.httpclient-cache-4.5.10.jar}:\
+    ${file.reference.httpclient-osgi-4.5.10.jar}:\
+    ${file.reference.httpclient-win-4.5.10.jar}:\
+    ${file.reference.httpcore-4.4.12.jar}:\
+    ${file.reference.httpmime-4.5.10.jar}:\
+    ${file.reference.jna-4.5.2.jar}:\
+    ${file.reference.jna-platform-4.5.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
